# Ca2-Sandbox

./: .gitignore  Makefile  README.md  pyproject.toml
src/ca2roi/: __init__.py  bleaching.py  cli.py  fluctuation.py  gui.py  roi.py  roi_similarity.py  smoothing.py  utils.py  video.py
src/commands/: cli.py  gui.py
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.vue
src/frontend/src/assets/: main.css
src/frontend/src/components/: AutoROIConfig.vue  BleachingCorrection.vue  FileSelector.vue  IntensityTracingPlot.vue  ROIList.vue  VideoCanvas.vue  VideoDisplay.vue
src/frontend/src/composables/: useBackendApi.ts  useChartConfig.ts  useROI.ts  useROIOperations.ts  useResizable.ts
src/frontend/src/types/: index.ts
tests/: README.md  __init__.py  conftest.py  test_bleaching.py  test_cli.py  test_fluctuation.py  test_roi.py  test_smoothing.py  test_utils.py  test_video.py
