[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca2roi"
version = "0.1.0"
description = "Calcium imaging ROI and bleaching analysis CLI tool"
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart>=0.0.20",
    "tqdm>=4.67.1",
]

[project.scripts]
ca2roi = "commands.cli:main"
ca2roi-gui = "commands.gui:main"


[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ca2roi"]

[tool.hatch.build.targets.wheel.include]
"static/*" = "static/*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/ca2roi --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
