[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca2roi"
version = "0.1.3"
description = "Calcium imaging automatic ROI selection and analysis tool"
authors = [ { name = "Seung Hyun Klm", email = "skim0119@gmail.com" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart>=0.0.20",
    "tqdm>=4.67.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.scripts]
ca2roi = "ca2roi.commands.cli:main"
ca2roi-gui = "ca2roi.commands.gui:main"


[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build]
include = ["src/**"]
exclude = ["src/frontend/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/ca2roi"]

[tool.hatch.build.targets.sdist.force-include]
"static" = "static"

[tool.hatch.build.targets.wheel.force-include]
"static" = "src/ca2roi/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/ca2roi --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
